[project]
name = "pydanticai-gemini-starter"
version = "0.1.0"
description = "PydanticAI + Gemini 入门项目 - 三个核心概念 Demo"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[google]>=0.0.14",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.50",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.uv]
package = false
